--- a/src/Header.css
+++ b/src/Header.css
@@ -1,15 +1,13 @@
 .header {
+	position: sticky;
+	top: 0;
+	z-index: 999;
 	display: flex;
-}
-
-.header__search {
-	padding: 10px;
-	display: flex;
-	align-items: center;
-	border-radius: 5px;
-	height: 22px;
-	color: gray;
-	background: #eef3f8;
+	justify-content: space-evenly;
+	border-bottom: 0.1px solid lightgray;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	width: 100%;
 }
 
 .header__left {
@@ -22,8 +20,22 @@
 	margin-right: 10px;
 }
 
+.header__search {
+	padding: 10px;
+	display: flex;
+	align-items: center;
+	border-radius: 5px;
+	height: 22px;
+	color: gray;
+	background: #eef3f8;
+}
+
 .header__search > input {
 	outline: none;
 	border: none;
 	background: none;
+}
+
+.header__right {
+	display: flex;
 }
