--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -21,15 +21,15 @@
 	border-top-right-radius: 10px;
 	background: white;
 	padding-bottom: 10px;
+	/* overflow: hidden; */
 }
 
 .sidebar__top > img {
 	margin-bottom: -20px;
-	width: 100%;
-	height: 60px;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
 	object-fit: cover;
+	width: 100%;
+	height: 80px;
+	border-radius: 10px 10px 0 0;
 }
 
 .sidebar__top > h4 {
@@ -44,9 +44,9 @@
 .sidebar__stats {
 	padding: 10px;
 	margin-bottom: 10px;
-	background-color: white;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	background: white;
+	border-right: 1px solid lightgray;
+	border-radius: 0 0 10px 10px;
 }
 
 .sidebar__stat {
